--- a/index.html
+++ b/index.html
@@ -56,11 +56,20 @@
     <section>
         <article id="text">
             <h2>HOME</h2>
-        <p>This site is a compilation of materials from different fields.</p>
+            <p>This site is a compilation of materials from different fields.</p>
         </article>
-        
-        <article>
-            
+
+        <article class="size3"><br>
+            <div>
+                <p>This is the front page of the Simple English Wikipedia. Wikipedias are places where people work
+                    together to write encyclopedias in different languages. We use Simple English words and grammar
+                    here. The Simple English Wikipedia is for everyone! That includes children and adults who are
+                    learning English. There are 223,660 articles on the Simple English Wikipedia. All of the pages are
+                    free to use. They have all been published under both the Creative Commons Attribution/Share-Alike
+                    License 3.0 and the GNU Free Documentation License. You can help here! You may change these pages
+                    and make new pages. Read the help pages and other good pages to learn how to write pages here. If
+                    you need help, you may ask questions at Simple talk.</p>
+            </div>
         </article>
     </section>
 
